--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>Your questions / results suck!</h2>
     <p>You're always welcome to offer improvements!</p>
 	<h2>Privacy notice</h2>
-    <p>At the end of the test, you will be given the option to fill out information about how you describe yourself politcally. There will be 3 options. The first will take you to a small survey and will record your answers to that along with the results. The second will just record your results. The third will not record anything. All information recorded is totally anonymous, and is being used for a research project by the creator of <a href="https://altvalues.github.io/">AltValues</a>.</p>
+    <p>Explanation by the SapplyValues creator (that applies to us as well): At the end of the test, you will be given the option to fill out information about how you describe yourself politcally. There will be 3 options. The first will take you to a small survey and will record your answers to that along with the results. The second will just record your results. The third will not record anything. All information recorded is totally anonymous, and is being used for a research project by the creator of <a href="https://altvalues.github.io/">AltValues</a>.</p>
     <h2>Legal notice</h2>
     <p>The 8values and 9Axes project licenses grant the rights to "modify, merge, publish, distribute" the software as long as "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software." The included notice can be found <a href="LICENSE.txt">here</a>. This project is released under the same license.</p>
     
