--- a/results.html
+++ b/results.html
@@ -1,14 +1,14 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <title>SapplyValues Results</title>
+    <title>Chameleon Test Results</title>
     <link rel="icon" type="x-icon" href="icon.png">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <meta charset="utf-8">
     </head>
     
     <body>
-    <h1>SapplyValues</h1>
+    <h1>Chameleon Test</h1>
     <hr>
     
     <h1>Results</h1>
